@@ -275,3 +275,45 @@ def test_rename_multiple_tags(hlwm, hc_idle):
         ['tag_renamed', 'foo_old', 'foo_new'],
         ['tag_renamed', 'bar_old', 'bar_new']
     ]
+
+
+# the test cases on focused_client are implicitly tests
+# for the DynChild_ related code.
+@pytest.mark.parametrize("client_exists", [True, False])
+def test_focused_client_existence(hlwm, client_exists):
+    # here, I want the same python code for the positive
+    # and negative test, because the negative test only checks
+    # whether no entry exists.
+    if client_exists:
+        winid, _ = hlwm.create_client()
+
+    def test_children(children):
+        assert ('focused_client' in children) == client_exists
+        assert 'tiling' in children
+
+    test_children(hlwm.list_children_via_attr('tags.0'))
+    test_children(hlwm.list_children('tags.0'))
+
+    if client_exists:
+        assert hlwm.get_attr('tags.0.focused_client.winid') == winid
+
+
+def test_focused_client_multiple_tags(hlwm):
+    tagname2clientcount = [
+        ('t1', 1),
+        ('t2', 0),
+        ('t3', 3),
+        ('t4', 1),
+    ]
+    tagname2clients = {}
+    for t, cnt in tagname2clientcount:
+        # replace dict entry by client list
+        hlwm.call(f'chain , add {t} , rule tag={t} focus=off')
+        tagname2clients[t] = [hlwm.create_client()[0] for _ in range(0, cnt)]
+
+    for t, clients in tagname2clients.items():
+        assert ('focused_client' in hlwm.list_children(f'tags.by-name.{t}')) \
+            == (len(clients) > 0)
+        if len(clients) > 0:
+            assert hlwm.get_attr(f'tags.by-name.{t}.focused_client.winid') \
+                == clients[0]
