@@ -7,6 +7,7 @@ older versions.
 Current git version
 -------------------
 
+  * New child object 'focused_client' for each tag object.
   * Bug fixes:
     - When hiding windows, correctly set their WM_STATE to IconicState (we set
       it to Withdrawn state before, which means "unmanaged" and thus is wrong).
